test_suite/tests/errors/duplicate_state_attribute.rs
use banish::banish;

fn main() {
    banish! {
        #[trace, trace]
        @foo
            done? { return; }
    }
}
