test_suite/tests/errors/duplicate_state_attribute.stderr
error: Duplicate attribute `trace`. Remove the duplicate
 --> tests/errors/duplicate_state_attribute.rs:5:18
  |
5 |         #[trace, trace]
  |                  ^^^^^
